+ Upload return origin name of images + Update swagger
